MB-45599: Use stack buffer in SendResponse

ep-engine copies the response handler and calls it from a background
thread in some cases and it'll end up racing on the thread local
scratch buffer we used to format the package header into.

To work around this problem use a stack allocated buffer as the
buffer is only 27 bytes big (24 for the header, 3 for frame info)

Change-Id: I405409e4fc4c565fc9eca3ae2d0355d1ff3103c7
Reviewed-on: http://review.couchbase.org/c/kv_engine/+/151030
Tested-by: Build Bot <build@couchbase.com>
Reviewed-by: Daniel Owen <owend@couchbase.com>